--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
+plugins:
+  - no-mootools
 env:
   node: true
 parserOptions:
   ecmaVersion: 6
 rules:
-  no-mootools: 2
+  no-extend-native: 2
+  no-global-assign: 2
+  no-mootools/no-builtin-extensions: 2
